<resources>
    <string name="app_name">My Application</string>
    <string name="peso">Peso</string>
    <string name="fecha_de_nacimiento">Fecha De Nacimiento</string>
    <string name="estatura">Estatura</string>
    <string name="tiposanguineo">TipoSanguineo</string>
    <string name="confirm">confirm</string>
    <string name="fechadenacimiento">Fecha De Nacimiento</string>
    <string name="Estatura">Estatura</string>
    <string name="Tiposanguineo">TipoSanguineo</string>
    <string name="Peso">Peso</string>
    <string name="Fecha_de_nacimiento">Fecha de Nacimiento</string>
    <string name="Estatura1">Estatura</string>
    <string name="Peso1">Peso</string>
</resources>